Modified HTML to use appes6.js which uses classes isntead of multiple functions

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <h1 class="display-5 text-center title">Task Planner</h1>
       <!-- Form Section  -->
       <div class="container">
-        <div class="row justify-content-around">
-          <div class="col col-lg-5">
+        <div class="row justify-space-between formrow">
+          <div class="col col-lg-6" id="form-row">
             <form id="task-form" class="form">
               <div class="form-group">
                 <label for="name">Name</label>
@@ -69,7 +69,7 @@
               <div class="form-group">
                 <label for="dueDate">Due Date</label>
                 <input
-                  type="textStatus"
+                  type="date"
                   class="form-control w-100"
                   id="dueDate"
                   placeholder="Due Date (dd/mm/yyyy)"
@@ -79,34 +79,31 @@
               <div class="form-group">
                 <label for="status">Status</label>
                 <select class="form-control w-100" id="status" name="status">
-                  <option>TODO</option>
-                  <option>IN PROGRESS</option>
-                  <option>REVIEW</option>
-                  <option>DONE</option>
+                  <option value="Todo" selected="selected">TODO</option>
+                  <option value="In-progress">IN PROGRESS</option>
+                  <option value="Review">REVIEW</option>
+                  <option value="Done">DONE</option>
                 </select>
-                <small id="error"></small>
               </div>
               <button type="submit" value="submit" class="btn submit-button">
                 Add Task
               </button>
             </form>
           </div>
-          <div class="col col-lg-5">
+          <div class="col col-lg-5" id="task-list-no-detail">
             <div class="card-body" id="collection">
-              <div class="list-group collection">
+              <!-- <div class="list-group collection">
                 <a href="#" class="list-group-item list-group-item">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1 task-name">Walk dog</h5>
-                    <small class="task-date">30/10/2020</small>
+                  <div
+                    class="d-flex w-100 justify-content-between align-items-center"
+                  >
+                    <span class="mb-1 task-name">Task for Vanessa</span>
+                    <span class="task-date">30/10/2020</span>
+                    <span class="task-status">To-do</span>
+                    <i class="fas fa-times fa-lg"></i>
                   </div>
-                  <p class="mb-1 task-description">sdfsdfsdfdsfdsfsdf</p>
-                  <small class="task-status">hi</small>
-                  <p>
-                    <small class="task-assigned-to">dfsdfsdgdsgsdgsdgsg</small>
-                  </p>
-                  <span><i class="fas fa-times fa-lg"></i></span>
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -127,8 +124,11 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row justify-content-around">
-        <div class="col-lg-2">
+      <div
+        class="row justify-content-around bottom-section"
+        id="card-container"
+      >
+        <!-- <div class="col-lg-2">
           <div class="card" style="width: 18rem">
             <div class="card-header">Task</div>
             <ul class="list-group list-group-flush">
@@ -235,7 +235,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <!-- <div class="card-body" id="collection">
@@ -268,6 +268,6 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <script src="app.js"></script>
+    <script src="./appes6.js"></script>
   </body>
 </html>
