--- a/index.html
+++ b/index.html
@@ -124,10 +124,7 @@
     </div>
 
     <div class="container-fluid">
-      <div
-        class="row justify-content-around bottom-section"
-        id="card-container"
-      >
+      <div class="row bottom-section" id="card-container">
         <!-- <div class="col-lg-2">
           <div class="card" style="width: 18rem">
             <div class="card-header">Task</div>
