Add edit functionality using update class

--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
                   <option value="Done">DONE</option>
                 </select>
               </div>
-              <button type="submit" value="submit" class="btn submit-button">
+              <button
+                type="submit"
+                value="submit"
+                id="addButton"
+                class="btn submit-button"
+              >
                 Add Task
               </button>
             </form>
