--- a/index.html
+++ b/index.html
@@ -89,9 +89,17 @@
                 type="submit"
                 value="submit"
                 id="addButton"
-                class="btn submit-button"
+                class="btn submit-button btn-outline-dark"
               >
                 Add Task
+              </button>
+              <button
+                type="button"
+                id="clearButton"
+                class="btn btn-outline-dark"
+                job="clear"
+              >
+                Clear Tasks
               </button>
             </form>
           </div>
