--- a/index.html
+++ b/index.html
@@ -104,166 +104,18 @@
             </form>
           </div>
           <div class="col col-lg-5" id="task-list-no-detail">
-            <div class="card-body" id="collection">
-              <!-- <div class="list-group collection">
-                <a href="#" class="list-group-item list-group-item">
-                  <div
-                    class="d-flex w-100 justify-content-between align-items-center"
-                  >
-                    <span class="mb-1 task-name">Task for Vanessa</span>
-                    <span class="task-date">30/10/2020</span>
-                    <span class="task-status">To-do</span>
-                    <i class="fas fa-times fa-lg"></i>
-                  </div>
-                </a>
-              </div> -->
+            <div class="row card-body" id="collection">
+              <!-- list goes here -->
             </div>
           </div>
         </div>
-
-        <!-- Filter Tasks section -->
-        <!-- <div class="container form">
-        <div class="input-group mb-3">
-          <input
-            type="text"
-            name="filter"
-            id="filter"
-            placeholder="Filter Tasks"
-            class="form-control"
-          />
-        </div>
-      </div> -->
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
       <div class="row bottom-section" id="card-container">
-        <!-- <div class="col-lg-2">
-          <div class="card" style="width: 18rem">
-            <div class="card-header">Task</div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <b>Task ID:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Assigned To:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Due Date:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Status:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Description:</b>
-                <p>hello</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="card" style="width: 18rem">
-            <div class="card-header">Task</div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <b>Task ID:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Assigned To:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Due Date:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Status:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Description:</b>
-                <p>hello</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="card" style="width: 18rem">
-            <div class="card-header">Task</div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <b>Task ID:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Assigned To:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Due Date:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Status:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Description:</b>
-                <p>hello</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="card" style="width: 18rem">
-            <div class="card-header">Task</div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <b>Task ID:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Assigned To:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Due Date:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Status:</b>
-                <p>hello</p>
-              </li>
-              <li class="list-group-item">
-                <b>Description:</b>
-                <p>hello</p>
-              </li>
-            </ul>
-          </div>
-        </div> -->
+        <!-- cards go here -->
       </div>
-
-      <!-- <div class="card-body" id="collection">
-        <div class="list-group collection">
-          <a href="#" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1 task-name">Walk dog</h5>
-              <small class="task-date">30/10/2020</small>
-            </div>
-            <p class="mb-1 task-description">sdfsdfsdfdsfdsfsdf</p>
-            <small class="task-status">hi</small>
-            <p>
-              <small class="task-assigned-to">dfsdfsdgdsgsdgsdgsg</small>
-            </p>
-            <span><i class="fas fa-times fa-lg"></i></span>
-          </a>
-        </div>
-      </div> -->
     </div>
 
     <br />
